--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "openai-quickstart-node",
+  "name": "Discord ChatGPT bot",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "node dogehaus.js"
   },
   "dependencies": {
-    "next": "^13.1.1",
-    "openai": "^3.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "discord.js": "^14.8.0",
+    "dotenv": "^16.0.3",
+    "openai": "^3.1.0"
   },
   "engines": {
     "node": ">=14.6.0"
