--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "Discord ChatGPT bot",
-  "version": "0.1.0",
+  "name": "Dogehaus ChatGPT bot",
+  "version": "0.1.1",
   "private": false,
+  "description": "A Discord bot using GPT-4",
+  "main": "src/index.js",
   "scripts": {
-    "dev": "node dogehaus.js"
+    "start": "node src/index.js"
   },
   "dependencies": {
     "discord.js": "^14.8.0",
