--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "A Discord bot using GPT-4",
   "main": "src/index.js",
   "scripts": {
+    "dev": "node dev/discordClient.js",
     "start": "node src/index.js"
   },
   "dependencies": {
