--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "Dogehaus ChatGPT bot",
-  "version": "0.1.1",
-  "private": false,
-  "description": "A Discord bot using GPT-4",
-  "main": "src/index.js",
+  "name": "gpt-4-discord-bot",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "start": "node src/index.js"
   },
   "dependencies": {
-    "discord.js": "^14.8.0",
-    "dotenv": "^16.0.3",
-    "openai": "^3.1.0"
-  },
-  "engines": {
-    "node": ">=14.6.0"
+    "axios": "^0.26.1",
+    "discord.js": "^13.6.0",
+    "dotenv": "^10.0.0",
+    "openai": "^3.2.1"
   }
 }
